--- a/onehotvector.ipynb
+++ b/onehotvector.ipynb
@@ -81,7 +81,9 @@
     "tfidf_vectorizer = TfidfVectorizer()\n",
     "\n",
     "tfidf = tfidf_vectorizer.fit_transform(corpus).toarray()\n",
-    "sns.heatmap(tfidf, annot=True, cbar=False, xticklabels=vocab, yticklabels=['Sentence 1', 'Sentence 2'])\n"
+    "sns.heatmap(tfidf, annot=True, cbar=False, xticklabels=vocab, yticklabels=['Sentence 1', 'Sentence 2'])\n",
+    "\n",
+    "# newline \n"
    ]
   },
   {
